implement add to fav

--- a/SkyRadar/app/src/main/res/layout/activity_root.xml
+++ b/SkyRadar/app/src/main/res/layout/activity_root.xml
@@ -58,5 +58,33 @@
         app:layout_constraintEnd_toEndOf="@+id/HomeFloatingActionButton"
         app:srcCompat="@drawable/map" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/FavFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/white"
+        android:tint="@color/black"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/MapFloatingActionButton"
+        app:layout_constraintEnd_toEndOf="@+id/MapFloatingActionButton"
+        app:srcCompat="@drawable/love" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/SettingsFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/white"
+        android:tint="@color/black"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/FavFloatingActionButton"
+        app:layout_constraintEnd_toEndOf="@+id/FavFloatingActionButton"
+        app:srcCompat="@drawable/settings" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
