--- a/SkyRadar/app/src/main/res/layout/fragment_map_weather_details.xml
+++ b/SkyRadar/app/src/main/res/layout/fragment_map_weather_details.xml
@@ -21,13 +21,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+            android:id="@+id/buttonAddToFavourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Favourite"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
         <TextView
             android:id="@+id/currentTempLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Current Temperature:"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintTop_toBottomOf="@id/buttonAddToFavourite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="8dp" />
