--- a/SkyRadar/app/src/main/res/layout/fragment_alarm.xml
+++ b/SkyRadar/app/src/main/res/layout/fragment_alarm.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".alarm.view.AlarmFragment">
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:timePickerMode="spinner"
+        android:layout_gravity="center"/>
 
-        <Button
-            android:id="@+id/btnSetTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select Time" />
+    <Button
+        android:id="@+id/setAlarmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Alarm"
+        android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/tvSelectedTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Selected time will appear here"
-            android:paddingTop="16dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewAlarms"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
-    </LinearLayout>
-</FrameLayout>
+</LinearLayout>
