--- a/SkyRadar/app/src/main/res/layout/alarm_item.xml
+++ b/SkyRadar/app/src/main/res/layout/alarm_item.xml
@@ -3,18 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/tvAlarmTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Alarm Time"
-        android:textSize="16sp" />
-
-    <Switch
-        android:id="@+id/switchAlarm"
+        android:id="@+id/alarmTimeTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text="Alarm Time" />
 </LinearLayout>
