--- a/SkyRadar/app/src/main/res/layout/fragment_network_issue.xml
+++ b/SkyRadar/app/src/main/res/layout/fragment_network_issue.xml
@@ -7,17 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".NetworkIssueFragment">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No Network"
-        android:textSize="34sp"
-        android:textStyle="bold"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/anim_weather"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="9dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.5"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/network"
+        app:lottie_speed="0.5"
+        app:lottie_url="REPLACE_JSON_URL" />
 </androidx.constraintlayout.widget.ConstraintLayout>
